# dotman

./: Cargo.toml
src/: consts.rs  main.rs
src/config/: command.rs  cron.rs  mod.rs  package.rs  script.rs
src/display/: mod.rs
src/dotfiles/: git.rs  mod.rs
src/logger/: mod.rs
src/shell/: mod.rs
