[package]
authors = ["Nikhil Prabhu <nikhilprabhu00@gmail.com>"]
edition = "2018"
name = "dotman"
version = "0.3.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
fs_extra = "1.2.0"
git2 = "0.13.20"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3.21"
terminal_size = "0.1.17"
